feat: Upgrade the project to utilize JDK17 full and proper.